@@ -3,6 +3,8 @@
    - Updated Flyway (margaretha)
 21/01/2021
    - Fixed running pipe and updated tests with mockserver (margaretha)
+19/02/2021
+   - Enabled API info web-service (margaretha)    
    
 # version 0.62.4
 24/01/2020
